Fix #14. Thanks to @niiks, radios and checkboxes are aligned to the right.

--- a/less/forms-rtl.less
+++ b/less/forms-rtl.less
@@ -15,9 +15,8 @@
 .radio-inline input[type="radio"],
 .checkbox input[type="checkbox"],
 .checkbox-inline input[type="checkbox"] {
-  float: right;
-  margin-right: 20px;
-  margin-left: 0;
+  margin-right: -20px;
+  margin-left: auto;
 }
 
 // Radios and checkboxes on same line
